<resources>
    <string name="app_name">Moebooru</string>

    <string name="post">Post</string>
    <string name="post_limit">Post limit</string>
    <string name="posts">Posts</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="tag_can_not_be_empty">Tag can not be empty</string>

    <string name="grid_mode">Grid mode</string>
    <string name="grid">Grid</string>
    <string name="staggered_grid">Staggered Grid</string>

    <string name="cache">Cache</string>
    <string name="cache_memory">Memory cache</string>
    <string name="cache_disk">Disk cache</string>

    <string name="about">About</string>
    <string name="about_url" translatable="false">file:///android_asset/pages/about.html</string>
    <string name="about_title">Moebooru</string>

    <string name="drawer_header_desc">Drawer header</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="edit">Edit</string>

    <string name="downloads">Downloads</string>

    <string name="appearance">Appearance</string>

    <string name="night_mode">Night mode</string>
    <string name="night_mode_system">Follow system</string>
    <string name="night_mode_auto">Auto</string>
    <string name="night_mode_on">On</string>
    <string name="night_mode_off">Off</string>

    <string name="more_options">More options</string>

    <string name="post_limit_default">40 (Default)</string>
    <string name="cache_memory_default">256 MiB (Default)</string>
    <string name="disk_memory_default">256 MiB (Default)</string>

    <string name="crash_report">Crash Report</string>
    <string name="enable_crash_report">Enable crash report</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="remove">Remove</string>
    <string name="copy">Copy</string>

    <string name="post_size_download">Download size</string>
    <string name="post_size_browse">Browse size</string>

    <string name="post_size_sample">Sample</string>
    <string name="post_size_larger">Larger</string>
    <string name="post_size_origin">Origin</string>

    <string name="post_stats_author">Author</string>
    <string name="post_stats_children">Children</string>
    <string name="post_stats_created_at">Created at</string>
    <string name="post_stats_creator">Creator</string>
    <string name="post_stats_id">Id</string>
    <string name="post_stats_larger_size">Larger size</string>
    <string name="post_stats_larger_url">Larger url</string>
    <string name="post_stats_origin_size">Origin size</string>
    <string name="post_stats_origin_url">Origin url</string>
    <string name="post_stats_parent_id">Parent</string>
    <string name="post_stats_rating">Rating</string>
    <string name="post_stats_sample_size">Sample size</string>
    <string name="post_stats_sample_url">Sample url</string>
    <string name="post_stats_score">Score</string>
    <string name="post_stats_size">Size</string>
    <string name="post_stats_source">Source</string>

    <string name="downloads_stop">Stop</string>
    <string name="downloads_start">Start</string>
    <string name="downloads_stop_all">Stop all</string>
    <string name="downloads_start_all">Start all</string>
    <string name="title_activity_login">Sign in</string>

    <string name="title_account">Account</string>
    <string name="title_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="share_to">Share to:</string>

    <string name="state_idle">IDLE</string>
    <string name="state_pending">PENDING</string>
    <string name="state_unknown">UNKNOWN</string>
    <string name="state_running">RUNNING</string>

    <string name="downloads_notification">Downloads notification</string>

    <string name="clear_completed">Clear completed</string>
    <string name="clear_all">Clear all</string>

    <string name="local_gallery">Local gallery</string>

</resources>
