<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 by onlymash <im@mash.im>, All rights reserved
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/appearance">

        <SimpleMenuPreference
            android:key="night_mode"
            android:entries="@array/night_modes"
            android:entryValues="@array/night_mode_values"
            android:defaultValue="system"
            android:summary="%s"
            android:title="@string/night_mode"
            android:icon="@drawable/ic_action_time_24dp"
            app:iconSpaceReserved="true"/>

        <SimpleMenuPreference
            android:key="grid_mode"
            android:entries="@array/grid_modes"
            android:entryValues="@array/grid_mode_values"
            android:defaultValue="staggered_grid"
            android:summary="%s"
            android:title="@string/grid_mode"
            android:icon="@drawable/ic_action_grid_24dp"
            app:iconSpaceReserved="true"/>

    </PreferenceCategory>
</PreferenceScreen>