<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:focusable="true" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:foreground="?android:selectableItemBackground" 
    card_view:cardBackgroundColor="#33000000" 
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="0dp"
    card_view:contentPadding="8dp"
    tools:ignore="RtlHardcoded" >
    <LinearLayout 
        android:orientation="vertical" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/sample_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/post_stats_sample_url_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/stats_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/post_stats_sample_url"
                    android:layout_weight="1" />
                <ImageButton
                    android:id="@+id/btn_download_sample"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_width="@dimen/list_size"
                    android:layout_height="@dimen/list_size"
                    android:src="@drawable/ic_action_file_download_white_24dp"
                    android:contentDescription="@null" />
                <ImageButton
                    android:id="@+id/btn_browser_sample"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_width="@dimen/list_size"
                    android:layout_height="@dimen/list_size"
                    android:src="@drawable/ic_action_open_in_browser_white_24dp"
                    android:contentDescription="@null" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/post_stats_sample_size_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/stats_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_stats_sample_size" />
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    android:ellipsize="marquee"
                    android:gravity="right"
                    android:id="@+id/tv_sample_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/larger_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/post_stats_larger_url_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/stats_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/post_stats_larger_url"
                    android:layout_weight="1" />
                <ImageButton
                    android:id="@+id/btn_download_larger"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_width="@dimen/list_size"
                    android:layout_height="@dimen/list_size"
                    android:src="@drawable/ic_action_file_download_white_24dp"
                    android:contentDescription="@null" />
                <ImageButton
                    android:id="@+id/btn_browser_larger"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_width="@dimen/list_size"
                    android:layout_height="@dimen/list_size"
                    android:src="@drawable/ic_action_open_in_browser_white_24dp"
                    android:contentDescription="@null" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/post_stats_larger_size_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/stats_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_stats_larger_size" />
                <TextView android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    android:ellipsize="marquee"
                    android:gravity="right"
                    android:id="@+id/tv_larger_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/origin_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/post_stats_origin_url_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/stats_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/post_stats_origin_url"
                    android:layout_weight="1" />
                <ImageButton
                    android:id="@+id/btn_download_origin"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_width="@dimen/list_size"
                    android:layout_height="@dimen/list_size"
                    android:src="@drawable/ic_action_file_download_white_24dp"
                    android:contentDescription="@null" />
                <ImageButton
                    android:id="@+id/btn_browser_origin"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_width="@dimen/list_size"
                    android:layout_height="@dimen/list_size"
                    android:src="@drawable/ic_action_open_in_browser_white_24dp"
                    android:contentDescription="@null" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/post_stats_origin_size_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/stats_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_stats_origin_size" />
                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    android:ellipsize="marquee"
                    android:gravity="right"
                    android:id="@+id/tv_origin_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>